<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/btn_setting"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/menu"
        android:background="@drawable/border_background"
        android:scaleType="fitCenter"
        android:onClick="navigateToSettings"
        android:contentDescription="@string/navigate_to_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/tv_balance_value"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:background="@drawable/border_background"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/tv_balance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_balance"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/tv_balance_value"
        app:layout_constraintStart_toStartOf="@id/tv_balance_value" />

    <TextView
        android:id="@+id/tv_daily_fund_value"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:gravity="center"
        android:background="@drawable/border_background"
        android:textColor="@android:color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/tv_daily_fund_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money_for_today"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@id/tv_daily_fund_value"
        app:layout_constraintStart_toStartOf="@id/tv_daily_fund_value"/>

    <TextView
        android:id="@+id/tv_month_fund_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_month_fund"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@id/tv_daily_fund_value"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_fund_value"
        android:layout_marginTop="6sp"/>

    <TextView
        android:id="@+id/tv_month_fund_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_background"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toEndOf="@id/tv_month_fund_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_month_fund_title"
        android:layout_marginStart="5sp"/>

    <Button
        android:id="@+id/btn_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkBeige"
        android:text="@string/transaction"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>