<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Transaction.TransactionsActivity">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/salt"
      android:paddingLeft="20dp"
      android:paddingTop="40dp"
      android:paddingRight="20dp"
      android:paddingBottom="40dp">

    <TextView
        android:id="@+id/tv_transactions_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transactions"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_18pt_bold"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/ll_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_style"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_below="@id/tv_transactions_title"
        android:layout_marginTop="20dp"
        android:elevation="4dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_18pt_regular"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/et_bg"
            android:hint="@string/enter_the_transaction_title"
            android:inputType="text"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:fontFamily="@font/inter_18pt_regular"
            android:padding="10dp"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="@font/inter_18pt_regular"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="@font/inter_18pt_regular"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:orientation="horizontal">

        <EditText
            android:id="@+id/et_amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/et_bg"
            android:hint="@string/enter_the_amount"
            android:inputType="numberDecimal"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:fontFamily="@font/inter_18pt_regular"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_date"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/et_bg"
            android:hint="@string/select_date"
            android:inputType="date"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:fontFamily="@font/inter_18pt_regular"
            android:padding="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp" />

        <Button
            android:id="@+id/btn_add_transaction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="+"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:fontFamily="@font/inter_18pt_semibold"
            android:background="@drawable/box_style"
            android:backgroundTint="@color/beige"
            android:gravity="center"/>
      </LinearLayout>

      <View
          android:layout_width="match_parent"
          android:layout_height="15dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv_line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:scaleType="fitXY"
        android:layout_below="@id/ll_data" />
    <LinearLayout
        android:id="@+id/ll_transactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_line1"
        android:orientation="horizontal">

      <EditText
          android:id="@+id/et_search"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="7"
          android:background="@drawable/sort_btn_bg"
          android:hint="@string/search"
          android:inputType="text"
          android:textAllCaps="false"
          android:textSize="16sp"
          android:textColor="@color/black"
          android:textColorHint="@color/black_26"
          android:fontFamily="@font/inter_18pt_medium"
          android:gravity="start|center"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"/>

      <View
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1" />

      <Button
          android:id="@+id/btn_sort"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="4"
          android:background="@drawable/sort_btn_bg"
          android:text="@string/date_sort"
          android:textAllCaps="false"
          android:textSize="16sp"
          android:textColor="@color/black_26"
          android:fontFamily="@font/inter_18pt_medium"
          android:gravity="start|center"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"
          android:layout_gravity="center"
          />
    </LinearLayout>

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/down_arrow"
        android:scaleType="centerCrop"
        app:tint="@color/black_23"
        android:layout_alignTop="@id/ll_transactions"
        android:layout_alignBottom="@id/ll_transactions"
        android:layout_alignEnd="@id/ll_transactions"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="2dp"/>

    <ImageView
        android:id="@+id/iv_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line1"
        android:layout_marginBottom="10dp"
        android:scaleType="fitXY"
        android:layout_below="@id/ll_transactions"
        android:layout_marginTop="10dp"/>

    <ListView
        android:id="@+id/lv_transactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_line2"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:id="@+id/ll_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/navigation_bar"
        android:orientation="horizontal"
        android:elevation="4dp">

      <ImageButton
          android:id="@+id/btn_settings"
          android:layout_width="64dp"
          android:layout_height="64dp"
          android:layout_marginTop="3dp"
          android:layout_marginBottom="3dp"
          android:layout_marginStart="3dp"
          android:contentDescription="@string/navigate_to_settings"
          android:background="@null"
          android:src="@drawable/settings_logo"
          android:scaleType="centerCrop"
          android:padding="7dp"
          app:tint="@color/beige" />

      <View
          android:layout_width="10dp"
          android:layout_height="match_parent" />

      <ImageButton
          android:id="@+id/btn_main"
          android:layout_width="64dp"
          android:layout_height="64dp"
          android:layout_marginTop="3dp"
          android:layout_marginBottom="3dp"
          android:onClick="navigateToMain"
          android:contentDescription="@string/navigate_to_main"
          android:background="@null"
          android:src="@drawable/budget_logo"
          android:scaleType="centerCrop"
          android:padding="5dp"
          app:tint="@color/beige" />

      <View
          android:layout_width="10dp"
          android:layout_height="match_parent" />

      <ImageView
          android:layout_width="64dp"
          android:layout_height="64dp"
          android:layout_marginTop="3dp"
          android:layout_marginBottom="3dp"
          android:layout_marginEnd="3dp"
          android:paddingStart="10dp"
          android:paddingEnd="10dp"
          android:background="@drawable/navigation_btn_bg"
          android:src="@drawable/transaction_logo"
          android:scaleType="centerCrop"
          android:padding="7dp"
          app:tint="@color/brown"/>
    </LinearLayout>
  </RelativeLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>