<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".Transaction.TransactionActivity">

  <ImageButton
      android:id="@+id/btn_main"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:src="@drawable/left_arrow_icon"
      android:background="@drawable/border_background"
      android:scaleType="fitCenter"
      android:onClick="navigateToMain"
      android:contentDescription="@string/navigate_to_main"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginStart="5dp"
      android:layout_marginTop="5dp" />

  <TextView
      android:id="@+id/tv_transactions"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/border_background"
      android:text="@string/transactions"
      android:textColor="@color/black"
      android:textSize="30sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.1"
      app:layout_constraintBottom_toBottomOf="parent"/>

  <LinearLayout
      android:id="@+id/ll_et"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"

      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginStart="20sp"
      android:layout_marginEnd="20sp"
      app:layout_constraintTop_toBottomOf="@+id/tv_transactions"
      android:layout_marginTop="40sp">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="2"
        android:background="@color/darkBeige"
        android:inputType="text"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="Transaction title"
        android:textColorHint="@color/white"
        android:layout_marginEnd="5dp"
        tools:ignore="HardcodedText"/>


    <EditText
        android:id="@+id/et_amount"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:background="@color/darkBeige"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="15,00.-"
        android:textColorHint="@color/white"
        android:layout_marginEnd="5dp"
        tools:ignore="HardcodedText"/>

    <EditText
        android:id="@+id/et_date"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_weight="1"
        android:background="@color/darkBeige"
        android:inputType="text"
        android:hint="20.01.25"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:textColor="@color/black"
        tools:ignore="HardcodedText"/>
  </LinearLayout>

  <LinearLayout
      android:id="@+id/ll_tv"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"

      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginStart="20sp"
      android:layout_marginEnd="20sp"
      app:layout_constraintBottom_toTopOf="@+id/ll_et"
      android:layout_marginTop="20sp">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/tv_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/amount"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginEnd="5dp"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/date"
        android:textSize="20sp"
        android:textColor="@color/black" />
  </LinearLayout>

  <ListView
      android:id="@+id/lv_transactions"
      android:layout_width="match_parent"
      android:layout_height="425dp"
      android:background="@drawable/border_background"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginStart="20sp"
      android:layout_marginEnd="20sp"
      app:layout_constraintTop_toBottomOf="@id/ll_et"
      app:layout_constraintBottom_toTopOf="@id/btn_add_transaction" />

  <Button
      android:id="@+id/btn_add_transaction"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/darkBeige"
      android:text="@string/add_transaction"
      android:textColor="@color/black"
      android:textSize="22sp"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      android:layout_marginStart="20sp"
      android:layout_marginEnd="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="10dp" />


  </androidx.constraintlayout.widget.ConstraintLayout>