<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".SettingsActivity">

    <ImageButton
        android:id="@+id/btn_main"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/left_arrow_icon"
        android:background="@drawable/border_background"
        android:scaleType="fitCenter"
        android:onClick="navigateToMain"
        android:contentDescription="@string/navigate_to_main"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        />

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_background"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/et_salary"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:background="@color/darkBeige"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="5000,00.-"
        android:textColorHint="@color/white"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/tv_settings"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_salary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salary"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/et_salary"
        app:layout_constraintBottom_toBottomOf="@id/et_salary"
        app:layout_constraintRight_toLeftOf="@id/et_salary"
        android:layout_marginEnd="25dp" />

    <EditText
        android:id="@+id/et_desired_monthly_save"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:background="@color/darkBeige"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="1250,00.-"
        android:textColorHint="@color/white"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/et_salary"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_desired_monthly_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desired_monthly_savings"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/et_desired_monthly_save"
        app:layout_constraintBottom_toBottomOf="@id/et_desired_monthly_save"
        app:layout_constraintRight_toLeftOf="@id/et_desired_monthly_save"
        android:layout_marginEnd="25dp" />

    <EditText
        android:id="@+id/et_payday_date"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:background="@color/darkBeige"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="25"
        android:textColorHint="@color/white"
        android:inputType="date"
        app:layout_constraintTop_toBottomOf="@id/et_desired_monthly_save"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_payday_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payday_date"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/et_payday_date"
        app:layout_constraintBottom_toBottomOf="@id/et_payday_date"
        app:layout_constraintRight_toLeftOf="@id/et_payday_date"
        android:layout_marginEnd="25dp" />

    <EditText
        android:id="@+id/et_current_month_fund"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:background="@color/darkBeige"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:hint="5542,75.-"
        android:textColorHint="@color/white"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/et_payday_date"
        android:layout_marginTop="50dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_current_month_fund"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_month_fund"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@id/et_current_month_fund"
        app:layout_constraintBottom_toBottomOf="@id/et_current_month_fund"
        app:layout_constraintRight_toLeftOf="@id/et_current_month_fund"
        android:layout_marginEnd="25dp" />

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/darkBeige"
        android:text="@string/apply"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>